--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.5",
+    "@clerk/nextjs": "^4.16.2",
     "@prisma/client": "^4.11.0",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.18.0",
@@ -18,7 +18,6 @@
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
     "next": "^13.2.4",
-    "next-auth": "^4.21.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.12.2",
