--- a/package.json
+++ b/package.json
@@ -12,15 +12,23 @@
   "dependencies": {
     "@clerk/nextjs": "^4.16.2",
     "@prisma/client": "^4.11.0",
+    "@radix-ui/react-checkbox": "^1.0.3",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.0.1",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.18.0",
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
+    "class-variance-authority": "^0.5.2",
+    "clsx": "^1.2.1",
+    "lucide-react": "^0.144.0",
     "next": "^13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.12.2",
+    "tailwind-merge": "^1.12.0",
+    "tailwindcss-animate": "^1.0.5",
     "zod": "^3.21.4"
   },
   "devDependencies": {
