--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.16.2",
-    "@prisma/client": "^4.11.0",
+    "@prisma/client": "^4.13.0",
     "@tanstack/react-query": "^4.29.1",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.18.0",
@@ -21,7 +21,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.12.2",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zod-prisma-types": "^2.5.6"
   },
   "devDependencies": {
     "@types/eslint": "^8.21.3",
@@ -37,7 +38,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.6",
     "prettier-plugin-tailwindcss": "^0.2.6",
-    "prisma": "^4.11.0",
+    "prisma": "^4.13.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.2"
   },
