--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"],
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@zod/*": ["/prisma/generated/zod/*"]
     }
   },
   "include": [
