--- a/package.json
+++ b/package.json
@@ -1,47 +1,35 @@
 {
-  "name": "mercstreaks",
+  "name": "streaks",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "prisma:generate": "prisma generate",
+    "dev": "prisma generate && next dev",
     "build": "next build",
-    "dev": "next dev",
-    "postinstall": "prisma generate",
-    "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.16.2",
-    "@prisma/client": "^4.13.0",
-    "@tanstack/react-query": "^4.29.1",
-    "@trpc/client": "^10.18.0",
-    "@trpc/next": "^10.18.0",
-    "@trpc/react-query": "^10.18.0",
-    "@trpc/server": "^10.18.0",
-    "next": "^13.2.4",
+    "@clerk/nextjs": "^4.17.3",
+    "@prisma/client": "^4.14.0",
+    "@radix-ui/react-popover": "1.0.5",
+    "@types/node": "20.1.3",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.1",
+    "next": "13.4.1",
+    "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "superjson": "1.12.2",
-    "zod": "^3.21.4"
+    "react-hook-form": "^7.43.9",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.0.4"
   },
   "devDependencies": {
-    "@types/eslint": "^8.21.3",
-    "@types/node": "^18.15.5",
-    "@types/prettier": "^2.7.2",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.56.0",
-    "@typescript-eslint/parser": "^5.56.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.36.0",
-    "eslint-config-next": "^13.2.4",
-    "postcss": "^8.4.21",
+    "prisma": "^4.14.0",
     "prettier": "^2.8.6",
-    "prettier-plugin-tailwindcss": "^0.2.6",
-    "prisma": "^4.13.0",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5.0.2"
-  },
-  "ct3aMetadata": {
-    "initVersion": "7.10.3"
+    "prettier-plugin-tailwindcss": "^0.2.6"
   }
 }
