--- a/package.json
+++ b/package.json
@@ -13,23 +13,30 @@
     "@clerk/nextjs": "^4.17.3",
     "@prisma/client": "^4.14.0",
     "@radix-ui/react-popover": "1.0.5",
+    "@tanstack/react-table": "^8.9.1",
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "lucide-react": "^0.216.0",
     "next": "13.4.1",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.5",
     "typescript": "5.0.4"
   },
   "devDependencies": {
-    "prisma": "^4.14.0",
     "prettier": "^2.8.6",
-    "prettier-plugin-tailwindcss": "^0.2.6"
+    "prettier-plugin-tailwindcss": "^0.2.6",
+    "prisma": "^4.14.0"
   }
 }
