--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.17.3",
     "@prisma/client": "^4.14.0",
+    "@radix-ui/react-label": "^2.0.1",
     "@radix-ui/react-popover": "1.0.5",
     "@tanstack/react-table": "^8.9.1",
     "@types/node": "20.1.3",
