--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "scripts": {
     "prisma:generate": "prisma generate",
     "dev": "prisma generate && next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.17.3",
     "@prisma/client": "^4.14.0",
+    "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-label": "^2.0.1",
-    "@radix-ui/react-popover": "1.0.5",
+    "@radix-ui/react-popover": "^1.0.5",
+    "@radix-ui/react-select": "^1.2.1",
     "@tanstack/react-table": "^8.9.1",
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
@@ -21,6 +24,7 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
     "lucide-react": "^0.216.0",
@@ -28,12 +32,14 @@
     "next-themes": "^0.2.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.5",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "prettier": "^2.8.6",
