--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
   "dependencies": {
     "@clerk/nextjs": "^4.17.3",
     "@prisma/client": "^4.14.0",
+    "@radix-ui/react-alert-dialog": "^1.0.3",
     "@radix-ui/react-avatar": "^1.0.2",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-label": "^2.0.1",
     "@radix-ui/react-popover": "^1.0.5",
     "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-separator": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.3",
     "@tanstack/react-table": "^8.9.1",
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
@@ -28,7 +30,6 @@
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
-    "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
@@ -45,8 +46,7 @@
     "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.5",
     "typescript": "5.0.4",
-    "zod": "^3.21.4",
-    "zustand": "^4.3.8"
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "prettier": "^2.8.6",
