--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "preview": "next build && next start"
   },
   "dependencies": {
     "@clerk/nextjs": "^4.17.3",
@@ -29,34 +30,38 @@
     "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.3",
     "@tanstack/react-table": "^8.9.1",
-    "@types/node": "20.1.3",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
-    "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
-    "eslint": "8.40.0",
-    "eslint-config-next": "13.4.1",
     "lucide-react": "^0.216.0",
     "next": "13.4.2",
     "next-safe-action": "^2.5.5",
     "next-themes": "^0.2.1",
-    "postcss": "8.4.23",
     "react": "18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "tailwind-merge": "^1.12.0",
-    "tailwindcss": "3.3.2",
     "tailwindcss-animate": "^1.0.5",
-    "typescript": "5.0.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
+    "@typescript-eslint/parser": "^5.58.0",
+    "autoprefixer": "10.4.14",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-tailwindcss": "^3.8.0",
+    "@types/node": "20.1.3",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
     "prettier": "^2.8.6",
-    "prettier-plugin-tailwindcss": "^0.2.6",
-    "prisma": "^4.14.0"
+    "prisma": "^4.14.0",
+    "typescript": "5.0.4",
+    "tailwindcss": "3.3.2",
+    "postcss": "8.4.23"
   },
   "resolutions": {
     "@types/react-dom": "18.2.4",
