--- a/package.json
+++ b/package.json
@@ -19,34 +19,40 @@
     "preview": "next build && next start"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.17.3",
-    "@prisma/client": "^4.14.0",
-    "@radix-ui/react-alert-dialog": "^1.0.3",
-    "@radix-ui/react-avatar": "^1.0.2",
-    "@radix-ui/react-dialog": "^1.0.3",
+    "@clerk/nextjs": "^4.19.0",
+    "@hookform/resolvers": "^3.1.0",
+    "@prisma/client": "^4.14.1",
+    "@radix-ui/react-alert-dialog": "^1.0.4",
+    "@radix-ui/react-avatar": "^1.0.3",
+    "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-label": "^2.0.1",
     "@radix-ui/react-popover": "^1.0.5",
-    "@radix-ui/react-select": "^1.2.1",
-    "@radix-ui/react-separator": "^1.0.2",
-    "@radix-ui/react-toast": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.4",
+    "@radix-ui/react-select": "^1.2.2",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.4",
     "@tanstack/react-table": "^8.9.1",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
     "lucide-react": "^0.216.0",
-    "next": "13.4.2",
+    "next": "13.4.3",
     "next-safe-action": "^2.5.5",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-day-picker": "^8.7.1",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.9",
+    "react-hook-form": "^7.44.2",
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^3.7.1",
+    "@types/node": "20.1.3",
+    "@types/react": "18.2.6",
+    "@types/react-dom": "18.2.4",
     "@typescript-eslint/parser": "^5.58.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
@@ -54,14 +60,11 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-tailwindcss": "^3.8.0",
-    "@types/node": "20.1.3",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
+    "postcss": "8.4.23",
     "prettier": "^2.8.6",
-    "prisma": "^4.14.0",
-    "typescript": "5.0.4",
+    "prisma": "^4.14.1",
     "tailwindcss": "3.3.2",
-    "postcss": "8.4.23"
+    "typescript": "5.0.4"
   },
   "resolutions": {
     "@types/react-dom": "18.2.4",
