--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-tailwindcss": "^3.8.0",
     "postcss": "8.4.23",
     "prettier": "^2.8.6",
+    "prettier-plugin-tailwindcss": "^0.3.0",
     "prisma": "^4.14.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
