--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,13 @@
 {
   "$schema": "https://json.schemastore.org/eslintrc",
   "root": true,
-  "extends": [
-    "next/core-web-vitals",
-    "prettier",
-    "plugin:tailwindcss/recommended"
-  ],
+  "extends": ["next/core-web-vitals", "prettier"],
   "plugins": ["tailwindcss"],
   "rules": {
     "@next/next/no-html-link-for-pages": "off",
-    "react/jsx-key": "off",
-    "tailwindcss/no-custom-classname": "off",
-    "tailwindcass/classnames-order": "off"
+    "react/jsx-key": "off"
   },
   "settings": {
-    "tailwindcss": {
-      "callees": ["cn"],
-      "config": "./tailwind.config.js"
-    },
     "next": {
       "rootDir": ["./"]
     }
